2.5.4 (2018-XX-XX)
  * Automatically detect physical RAM and set the Java heap maximum to a
    reasonable default to avoid 'java.lang.OutOfMemoryError'.  As before, users
    can still explicitly set it using the .rscalaOptions function and the
    heap.maximum argument to the scala function.

2.5.3 (2018-04-10)
  * Resubmitted as per CRAN request.

2.5.2 (2018-04-07)
  * Added support for Java 9, 10, and 11.
  * Removed 'timeout' argument to 'scala' function.

2.5.1 (2018-02-10)
  * Added the .rscalaOptions function to make it easier to set
    rscala.scala.home, rscala.heap.maximum, rscala.command.line.options.
  * Added 'digest' as a suggested package for building the vignette.
  * Bug fix for rscalaRequire function on Windows.

2.5.0 (2017-11-24)
  * Made 'scala' function return NULL and provide the interpreter as a side
    effect.  This lowers the perceived delay in instantiating and first-use of
    a Scala interpreter.  Added 'scala2' and 'scala3' functions to customize
    how the Scala/R bridge is established.  Users should change instances of
    's <- scala()' to 'scala()' or 's <- scala3()'.
  * Caching of methods calls from difference instances of Scala references for
    faster invocation.
  * Added ability to control which variables are passed to a Scala
    function using the [ operator.  Including additional items can be
    convenient and excluding items avoids potentially costly serializing over
    the R/Scala bridge.  See the vignette for syntactical details.
  * Added experimental support for data frames with the scalaConvert.data.frame
    function.
  * Dropped support for Scala 2.10.x and Java 6.

2.4.0 (2017-09-27)
  * Improved input/output performance for large transfers over TCP/IP bridge.
  * Substantially lower protocol overhead when calling Scala methods (e.g.,
    's$scala.util.Random$nextGaussian()') and Scala
    functions (e.g., function(x) s %!% '2+x').