@@ -5,6 +5,8 @@ export("%~%")
 export("%.~%")
 export("%!%")
 export("%.!%")
+export("%#%")
+export("%.#%")
 export(".rscalaOptions")
 export(".rscalaJar")
 export(".rscalaPackage")
@@ -25,6 +27,8 @@ S3method("%~%","ScalaInterpreter")
 S3method("%.~%","ScalaInterpreter")
 S3method("%!%","ScalaInterpreter")
 S3method("%.!%","ScalaInterpreter")
+S3method("%#%","ScalaInterpreter")
+S3method("%.#%","ScalaInterpreter")
 S3method("$","ScalaInterpreter")
 S3method("$<-","ScalaInterpreter")
 S3method("[","ScalaInterpreter")
